--- a/ApplesGame/ApplesGame.vcxproj
+++ b/ApplesGame/ApplesGame.vcxproj
@@ -163,7 +163,9 @@
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="GameSettings.cpp" />
     <ClCompile Include="GameStat.cpp" />
+    <ClCompile Include="GameStateMainMenu.cpp" />
     <ClCompile Include="Math.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Stone.cpp" />
   </ItemGroup>
@@ -172,7 +174,9 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameSettings.h" />
     <ClInclude Include="GameStat.h" />
+    <ClInclude Include="GameStateMainMenu.h" />
     <ClInclude Include="Math.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stone.h" />
